# armProj

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  openocd.cfg
.github/workflows/: build-mcu.yml  ci.yml
build_arm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_host/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake/toolchains/: arm-gcc.cmake
docs/: metrics.md  week1_tasks.md
mcu/cubemx/: test1.ioc
mcu/src/: main.c
scripts/: measure_latency.py  measure_power.py  measure_throughput.py
tests/: main.c
